// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.NavBar docKit example UU5.Bricks.NavBar example01 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="Header"
      id="uuID2"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          glyphiconClosed="uu‑glyphicon‑calendar"
          id="uuID3"
          key="nav-0"
        >
          <nav-bar-nav-item
            content="My Nav Item"
            id="uuID4"
          />
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props alwaysOpen=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props alwaysOpen=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      _hamburger={false}
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props checkGrammar=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props checkGrammar=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props checkHighlight=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props checkHighlight=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props checkSpaces=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props checkSpaces=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props className="my-classname" 1`] = `
<nav
  className="uu5-bricks-nav-bar my-classname uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props className="test-classname" 1`] = `
<nav
  className="uu5-bricks-nav-bar test-classname uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="brown" 1`] = `
<nav
  className="color-schema-brown uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="brown-rich" 1`] = `
<nav
  className="color-schema-brown-rich uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="cyan" 1`] = `
<nav
  className="color-schema-cyan uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="cyan-rich" 1`] = `
<nav
  className="color-schema-cyan-rich uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="default" 1`] = `
<nav
  className="color-schema-default uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="green" 1`] = `
<nav
  className="color-schema-green uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="green-rich" 1`] = `
<nav
  className="color-schema-green-rich uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="grey" 1`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="grey-rich" 1`] = `
<nav
  className="color-schema-grey-rich uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="orange" 1`] = `
<nav
  className="color-schema-orange uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="orange-rich" 1`] = `
<nav
  className="color-schema-orange-rich uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="pink" 1`] = `
<nav
  className="color-schema-pink uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="pink-rich" 1`] = `
<nav
  className="color-schema-pink-rich uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="purple" 1`] = `
<nav
  className="color-schema-purple uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="purple-rich" 1`] = `
<nav
  className="color-schema-purple-rich uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="red" 1`] = `
<nav
  className="color-schema-red uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="red-rich" 1`] = `
<nav
  className="color-schema-red-rich uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="yellow" 1`] = `
<nav
  className="color-schema-yellow uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props colorSchema="yellow-rich" 1`] = `
<nav
  className="color-schema-yellow-rich uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props content="This is Content from ContentMixin" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          key="nav-0"
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props content=12345 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          key="nav-0"
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props controlled=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props controlled=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props default props 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props disabled=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props disabled=false 3`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props disabled=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-common-disabled uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</nav>
`;

exports[`UU5.Bricks.NavBar props disabled=true 3`] = `
<nav
  className="uu5-bricks-nav-bar uu5-common-disabled uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</nav>
`;

exports[`UU5.Bricks.NavBar props dynamic=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props dynamic=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props fixed="bottom" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props fixed="top" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-top"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props fullTextSearchPriority=0 1`] = `
<nav
  className="uu5-bricks-nav-bar uu-fulltextsearch-0 uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props hidden=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props hidden=false 3`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props hidden=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-common-hidden uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props hidden=true 3`] = `
<nav
  className="uu5-bricks-nav-bar uu5-common-hidden uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props iconClosed="uu5-minus" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      _icon="uu5-minus"
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props iconOpen="uu5-plus" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props id="myId" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="myId"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="myId-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="myId-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="myId-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props id="test-id" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="test-id"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="test-id-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="test-id-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="test-id-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props ignoreHTML=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props ignoreHTML=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props mainAttrs=undefined 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props name="myName" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  name="myName"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="bigBox" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="bigBoxCollection" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="box" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="box" 3`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="boxCollection" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="container" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="inline" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="inline" 3`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="page" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="smallBox" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="smallBoxCollection" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props nestingLevel="spa" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props noIndex=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props noIndex=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-noindex uu-fulltextsearch-0 uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props noPrint=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props noPrint=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props offset=70 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
          offset={70}
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props open=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props open=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-open"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props pureRender=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props pureRender=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props selected=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props selected=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-common-selected uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props size="l" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-l"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      _size="l"
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          _size="l"
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props size="m" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props size="s" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-s"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      _size="s"
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          _size="s"
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props size="xl" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-xl"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      _size="xl"
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          _size="xl"
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props smoothScroll=3000 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props style="padding:8px; borderRadius: 2px" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "borderRadius": "2px",
      "padding": "8px",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props style={"backgroundColor":"red","color":"blue"} 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "backgroundColor": "red",
      "color": "blue",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props style={"margin":8} 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "margin": 8,
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props textCorrector=false 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props textCorrector=true 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props tooltip="My Tooltip" 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title="My Tooltip"
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="child01"
          key="nav-0"
        >
          <nav-bar-nav-item
            d="child02"
          >
            News
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar props.Function UU5.Bricks.NavBar -  onClosed() should be called 1`] = `
<NavBar
  id="NavBarID"
  offset={70}
  onClose={[Function]}
  onOpen={[Function]}
>
  <nav-bar-nav
    id="NavBarNavID"
  >
    <nav-bar-nav-item
      id="itemID"
    >
      Cars
    </nav-bar-nav-item>
  </nav-bar-nav>
</NavBar>
`;

exports[`UU5.Bricks.NavBar props.Function UU5.Bricks.NavBar -  onOpen() should be called 1`] = `
<NavBar
  id="NavBarID"
  offset={70}
  onClose={[Function]}
  onOpen={[Function]}
>
  <nav-bar-nav
    id="NavBarNavID"
  >
    <nav-bar-nav-item
      id="itemID"
    >
      Cars
    </nav-bar-nav-item>
  </nav-bar-nav>
</NavBar>
`;
